--- a/docker/php/7.2/fpm/alpine/conf/php.ini
+++ b/docker/php/7.2/fpm/alpine/conf/php.ini
@@ -9,14 +9,13 @@ upload_max_filesize = 20M
 date.timezone = UTC
 
 [xdebug]
-xdebug.remote_enable = 1
-xdebug.remote_connect_back = 1
-xdebug.default_enable = 1
-xdebug.remote_autostart = 1
+xdebug.remote_enable = On
+xdebug.remote_connect_back = Off
+xdebug.default_enable = On
+xdebug.remote_autostart = On
 xdebug.remote_host = 10.254.254.254
 xdebug.remote_port = 9000
 xdebug.max_nesting_level = 1024
-xdebug.idekey = PHPSTORM
 
 [opcache]
 opcache.enable = On
