Changed ENV instructions to ARG for build time variables

--- a/docker/php/7.2/fpm/alpine/Dockerfile
+++ b/docker/php/7.2/fpm/alpine/Dockerfile
@@ -2,10 +2,11 @@ FROM    php:7.2-fpm-alpine
 
 LABEL   maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
-ENV     XDEBUG_VERSION=${XDEBUG_VERSION:-2.7.2}
-ENV     PHPREDIS_VERSION=${PHPREDIS_VERSION:-4.3.0}
-ENV     AMQP_VERSION=${AMQP_VERSION:-1.9.4}
-ENV     SSH2_VERSION=${SSH2_VERSION:-1.1.2}
+ARG     XDEBUG_VERSION=${XDEBUG_VERSION:-2.7.2}
+ARG     PHPREDIS_VERSION=${PHPREDIS_VERSION:-4.3.0}
+ARG     AMQP_VERSION=${AMQP_VERSION:-1.9.4}
+ARG     SSH2_VERSION=${SSH2_VERSION:-1.1.2}
+
 ENV     COMPOSER_ALLOW_SUPERUSER=1
 
 RUN     apk add --no-cache \
