Updated maintainer label

--- a/docker/nginx/1.16/alpine/Dockerfile
+++ b/docker/nginx/1.16/alpine/Dockerfile
@@ -1,6 +1,6 @@
 FROM    nginx:1.16-alpine
 
-LABEL   maintainer="Mage2click"
+LABEL   maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
 COPY    conf/* /etc/nginx/
 
