--- a/docker/php/7.2/fpm/alpine/conf/php.ini
+++ b/docker/php/7.2/fpm/alpine/conf/php.ini
@@ -14,7 +14,7 @@ xdebug.max_nesting_level = 1024
 xdebug.remote_autostart = On
 xdebug.remote_connect_back = Off
 xdebug.remote_enable = On
-xdebug.remote_host = 10.254.254.254
+xdebug.remote_host = host.docker.internal
 xdebug.remote_port = 9000
 
 [opcache]
