--- a/docker/php/7.0/fpm/alpine/Dockerfile
+++ b/docker/php/7.0/fpm/alpine/Dockerfile
@@ -16,31 +16,36 @@ COPY    docker-host /usr/local/bin/
 RUN     apk add --no-cache busybox-suid \
             icu-dev freetype-dev libzip-dev libpng-dev libxml2-dev libedit-dev readline-dev \
             gettext-dev libxslt-dev libssh2-dev rabbitmq-c-dev libjpeg-turbo-dev libmcrypt-dev \
-            bash lsof nodejs-npm supervisor \
-        && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-        && docker-php-ext-configure zip --with-libzip \
-        && docker-php-ext-install \
+            bash lsof nodejs-npm supervisor && \
+        docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
+        docker-php-ext-configure zip --with-libzip && \
+        docker-php-ext-install \
             bcmath gd intl mbstring opcache readline gettext \
-            calendar mcrypt pdo_mysql mysqli soap xsl zip \
-        && apk add --no-cache --virtual .build-deps ${PHPIZE_DEPS} \
-        && yes '' | pecl install --onlyreqdeps igbinary \
+            calendar mcrypt pdo_mysql mysqli soap xsl zip && \
+        apk add --no-cache --virtual .build-deps ${PHPIZE_DEPS} && \
+        yes '' | pecl install --onlyreqdeps igbinary \
             xdebug-${XDEBUG_VERSION} redis-${PHPREDIS_VERSION} \
-            amqp-${AMQP_VERSION} ssh2-${SSH2_VERSION} \
-        && docker-php-ext-enable xdebug igbinary redis amqp ssh2 \
-        && sed -i -e 's/^zend_extension/\;zend_extension/g' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && apk del .build-deps \
-        && curl -sS https://getcomposer.org/installer | \
-            php -- --install-dir=/usr/local/bin --filename=composer \
-        && rm -rf /var/cache/apk/* \
-        && rm -rf /tmp/* \
-        && addgroup -g 1000 -S app \
-        && adduser -u 1000 -S app -G app -h /var/www/html -s /bin/bash \
-        && echo 'export PS1="\w $ "' > /var/www/.bashrc \
-        && mkdir -p /var/www/.config /var/www/.npm /sock /usr/local/var/log \
-        && touch /usr/local/var/log/php-fpm.log /var/spool/cron/crontabs/app \
-        && chown -R app:app /var/www/html /var/www/.bashrc /var/www/.config \
+            amqp-${AMQP_VERSION} ssh2-${SSH2_VERSION} && \
+        docker-php-ext-enable xdebug igbinary redis amqp ssh2 && \
+        sed -i -e 's/^zend_extension/\;zend_extension/g' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && \
+        set -ex && cd /tmp && \
+        curl -O https://files.magerun.net/n98-magerun2.phar && \
+        mv n98-magerun2.phar /usr/local/bin/ && \
+        chmod +x /usr/local/bin/n98-magerun2.phar && \
+        apk del .build-deps && \
+        curl -sS https://getcomposer.org/installer | \
+            php -- --install-dir=/usr/local/bin --filename=composer && \
+        rm -rf /var/cache/apk/* && \
+        rm -rf /tmp/* && \
+        addgroup -g 1000 -S app && \
+        adduser -u 1000 -S app -G app -h /var/www/html -s /bin/bash && \
+        echo 'export PS1="\w $ "' > /var/www/.bashrc && \
+        mkdir -p /var/www/.config /var/www/.npm /sock /usr/local/var/log && \
+        touch /usr/local/var/log/php-fpm.log /var/spool/cron/crontabs/app && \
+        chown -R app:app /var/www/html /var/www/.bashrc /var/www/.config \
             /var/www/.npm /usr/local/etc/php/conf.d /sock /usr/local/var/log/php-fpm.log \
-        && ln -s /var/www/html/node_modules/grunt/bin/grunt /usr/bin/grunt
+            /usr/local/bin/n98-magerun2.phar && \
+        ln -s /var/www/html/node_modules/grunt/bin/grunt /usr/bin/grunt
 
 WORKDIR /var/www/html
 
