Updated supervisord config, added n98-magerun symbolic link

--- a/docker/php/7.0/fpm/alpine/Dockerfile
+++ b/docker/php/7.0/fpm/alpine/Dockerfile
@@ -45,7 +45,8 @@ RUN     apk add --no-cache busybox-suid \
         chown -R app:app /var/www/html /var/www/.bashrc /var/www/.config \
             /var/www/.npm /usr/local/etc/php/conf.d /sock /usr/local/var/log/php-fpm.log \
             /usr/local/bin/n98-magerun2.phar && \
-        ln -s /var/www/html/node_modules/grunt/bin/grunt /usr/bin/grunt
+        ln -s /var/www/html/node_modules/grunt/bin/grunt /usr/bin/grunt \
+        ln -s /usr/local/bin/n98-magerun2.phar /usr/local/bin/n98-magerun2
 
 WORKDIR /var/www/html
 
