Updated PHP configuration, added the fix for n98-magerun symlink if symlink already exists

--- a/docker/php/7.2/fpm/alpine/conf/php.ini
+++ b/docker/php/7.2/fpm/alpine/conf/php.ini
@@ -28,3 +28,5 @@ opcache.revalidate_freq = 2
 opcache.save_comments = 1
 opcache.enable_file_override = 1
 
+[mail function]
+sendmail_path = /usr/sbin/sendmail -S mailhog:1025
