--- a/docker/php/5.6/fpm/alpine/conf/php-fpm.conf
+++ b/docker/php/5.6/fpm/alpine/conf/php-fpm.conf
@@ -1,15 +1,11 @@
 [www]
-
-listen = /sock/docker.sock
-listen.owner = app
-listen.group = app
-listen.mode = 0660
+listen = 9000
 
 pm = dynamic
-pm.max_children = 10
-pm.start_servers = 4
-pm.min_spare_servers = 2
-pm.max_spare_servers = 6
+pm.max_children = 50
+pm.start_servers = 5
+pm.min_spare_servers = 5
+pm.max_spare_servers = 35
 
 clear_env = no
 
