Added fix to nginx fastcgi_backend, removed redundant `user` config entry

--- a/docker/nginx/alpine/Dockerfile
+++ b/docker/nginx/alpine/Dockerfile
@@ -10,8 +10,7 @@ COPY    conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
 RUN     addgroup -S -g 1000 app && \
         adduser -S -g 1000 -u 1000 -h /var/www -s /bin/ash app && \
         touch /var/run/nginx.pid && \
-        mkdir -p /sock && \
-    	chown -R app:app /sock /var/cache/nginx /var/run/nginx.pid \
+    	chown -R app:app /var/cache/nginx /var/run/nginx.pid \
     		/etc/nginx/nginx.conf /etc/nginx/conf.d
 
 USER    app:app
