Fixed path in root CA configuration

--- a/.m2c/ssl/config/rootca.conf
+++ b/.m2c/ssl/config/rootca.conf
@@ -10,7 +10,7 @@ unique_subject = no
 new_certs_dir = $dir/new
 
 certificate	= $dir/certs/rootCA.crt
-private_key	= $dir/keys/rootCA.key
+private_key	= $dir/private/rootCA.key
 serial = $dir/serial/rootCA.srl
 crl = $dir/crl/rootCA.crl
 
