--- a/.m2c/local/docker-compose.phpmyadmin.yml
+++ b/.m2c/local/docker-compose.phpmyadmin.yml
@@ -5,7 +5,7 @@ services:
   phpmyadmin:
     container_name: ${M2C_CFG_DOMAIN_NAME}__phpmyadmin
     hostname: ${M2C_CFG_DOMAIN_NAME}__phpmyadmin
-    image: phpmyadmin/phpmyadmin:fpm-alpine
+    image: phpmyadmin/phpmyadmin
     depends_on:
       - db
     labels:
@@ -16,8 +16,9 @@ services:
       - MYSQL_ROOT_PASSWORD=${M2C_CFG_MYSQL_ROOT_PASSWORD:-magento}
       - MYSQL_USER=${M2C_CFG_MYSQL_USER:-magento}
       - MYSQL_PASSWORD=${M2C_CFG_MYSQL_PASSWORD:-magento}
-      - PMA_ABSOLUTE_URI=https://pma.${M2C_CFG_DOMAIN_NAME}/
       - PMA_HOST=${M2C_CFG_DOMAIN_NAME}__db
+      - PMA_USER=${M2C_CFG_MYSQL_USER:-magento}
+      - PMA_PASSWORD=${M2C_CFG_MYSQL_PASSWORD:-magento}
     networks:
       - m2c
       - default
