Updated ssl root ca config

--- a/.m2c/ssl/config/rootca.conf
+++ b/.m2c/ssl/config/rootca.conf
@@ -62,26 +62,41 @@ emailAddress_max = 64
 challengePassword = A challenge password
 challengePassword_min = 4
 challengePassword_max = 20
-
 unstructuredName = An optional company name
-
-[usr_cert]
-basicConstraints = CA:FALSE
-nsComment = "OpenSSL Generated Certificate"
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid,issuer
 
 [v3_req]
 basicConstraints = CA:FALSE
-keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage = nonRepudiation,digitalSignature,keyEncipherment
 
 [v3_ca]
 subjectKeyIdentifier = hash
 authorityKeyIdentifier=keyid:always,issuer
 basicConstraints = critical,CA:TRUE
+keyUsage = critical,digitalSignature,cRLSign,keyCertSign
 
-[crl_ext]
-authorityKeyIdentifier=keyid:always
+[v3_intermediate_ca]
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always,issuer
+basicConstraints = critical,CA:TRUE,pathlen:0
+keyUsage = critical,digitalSignature,cRLSign,keyCertSign
+
+[usr_cert]
+basicConstraints = CA:FALSE
+nsCertType = client,email
+nsComment = "OpenSSL Generated Certificate"
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid,issuer
+keyUsage = critical,nonRepudiation,digitalSignature,keyEncipherment
+extendedKeyUsage = clientAuth,emailProtection
+
+[server_cert]
+basicConstraints = CA:FALSE
+nsCertType = server
+nsComment = "OpenSSL Generated Certificate"
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid,issuer:always
+keyUsage = critical,digitalSignature,keyEncipherment
+extendedKeyUsage = serverAuth
 
 [proxy_cert_ext]
 basicConstraints=CA:FALSE
@@ -89,3 +104,13 @@ nsComment = "OpenSSL Generated Certificate"
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid,issuer
 proxyCertInfo = critical,language:id-ppl-anyLanguage,pathlen:3,policy:foo
+
+[crl_ext]
+authorityKeyIdentifier=keyid:always
+
+[ocsp]
+basicConstraints = CA:FALSE
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid,issuer
+keyUsage = critical,digitalSignature
+extendedKeyUsage = critical,OCSPSigning
