Updated docker-compose config files, added project path label

--- a/.m2c/local/docker/docker-compose.yml
+++ b/.m2c/local/docker/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - PHP_IDE_CONFIG=${M2C_CFG_DOMAIN_NAME}
     depends_on:
       - db
+    labels:
+      - m2c.project.path=${M2C_PROJECT_PATH}
     networks:
       - default
       - m2c
