Fix for non restarting m2c container

--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - traefik.enable=true
       - traefik.frontend.rule=Host:m2c.test
       - traefik.port=8080
+    restart: always
 
   traefik:
     container_name: m2c.test__traefik
