--- a/.m2c/local/docker/docker-compose.yml
+++ b/.m2c/local/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     extra_hosts:
       - ${M2C_CFG_DOMAIN_NAME}:${M2C_TRAEFIK_IP:-0.0.0.0}
     environment:
-      - PHP_IDE_CONFIG=${M2C_CFG_DOMAIN_NAME}
+      - PHP_IDE_CONFIG=serverName=${M2C_CFG_DOMAIN_NAME}
     depends_on:
       - db
     labels:
