--- a/docker/php/7.0/fpm/alpine/conf/php-fpm.conf
+++ b/docker/php/7.0/fpm/alpine/conf/php-fpm.conf
@@ -1,5 +1,8 @@
 [www]
-listen = 9000
+listen = /sock/docker.sock
+listen.owner = app
+listen.group = app
+listen.mode = 0660
 
 pm = dynamic
 pm.max_children = 50
