Updated nginx conf to automatically activate debugging based on cookie value

--- a/docker/nginx/alpine/conf/conf.d/default.conf
+++ b/docker/nginx/alpine/conf/conf.d/default.conf
@@ -1,5 +1,14 @@
-upstream fastcgi_backend {
-	server unix:/sock/docker.sock;
+upstream fastcgi_php_backend {
+    server unix:/sock/docker.sock;
+}
+
+upstream fastcgi_php_xdebug_backend {
+    server unix:/sock/docker-xdebug.sock;
+}
+
+map $cookie_XDEBUG_SESSION $fastcgi_backend {
+    "" fastcgi_php_backend;
+    default fastcgi_php_xdebug_backend;
 }
 
 server {
