Updated volumes to readonly where write access is not needed

--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -28,9 +28,9 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ~/.m2c/traefik/traefik.toml:/etc/traefik/traefik.toml
-      - ~/.m2c/ssl/certs/m2c.crt:/etc/ssl/certs/m2c.crt
-      - ~/.m2c/ssl/private/m2c.key:/etc/ssl/private/m2c.key
+      - ~/.m2c/traefik/traefik.toml:/etc/traefik/traefik.toml:ro
+      - ~/.m2c/ssl/certs/m2c.crt:/etc/ssl/certs/m2c.crt:ro
+      - ~/.m2c/ssl/private/m2c.key:/etc/ssl/private/m2c.key:ro
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - traefik.enable=true
