Added volume readonly flag to linux docker-compose config

--- a/.m2c/local/docker/docker-compose.linux.yml
+++ b/.m2c/local/docker/docker-compose.linux.yml
@@ -4,7 +4,7 @@ services:
 
   nginx:
     volumes:
-      - ./../../${M2C_CFG_MAGENTO_SRC}/:/var/www/html
+      - ./../../${M2C_CFG_MAGENTO_SRC}/:/var/www/html:ro
       - sock_data:/sock
 
   php:
