--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   traefik:
     container_name: m2c.test__traefik
-    image: traefik
+    image: traefik:1.7-alpine
     command:
       - --api
       - --docker
