--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   mage2click:
     container_name: m2c.test__mage2click
-    image: nginx:alpine
+    image: nginx:1.17-alpine
     volumes:
       - ~/.m2c/www/default.conf:/etc/nginx/conf.d/default.conf
       - ~/.m2c/www/html/index.html:/usr/share/nginx/html/index.html
@@ -40,7 +40,7 @@ services:
 
   portainer:
     container_name: m2c.test__portainer
-    image: portainer/portainer
+    image: portainer/portainer:1.22.0
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer:/data
@@ -62,7 +62,7 @@ services:
 
   dnsmasq:
     container_name: m2c.test__dnsmasq
-    image: jpillora/dnsmasq
+    image: jpillora/dnsmasq:1.1
     ports:
       - 53:53/udp
     volumes:
