Added changes to support Traefik v2.

--- a/.m2c/local/docker/docker-compose.varnish.yml
+++ b/.m2c/local/docker/docker-compose.varnish.yml
@@ -18,8 +18,10 @@ services:
       - nginx
     labels:
       - traefik.enable=true
-      - traefik.port=80
-      - traefik.frontend.rule=Host:${M2C_CFG_DOMAIN_NAME}
+      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.tls=true
+      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.entryPoints=https
+      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.rule=Host(`${M2C_CFG_DOMAIN_NAME}`)
+      - traefik.http.services.varnish-${M2C_PROJECT_NAME}.loadbalancer.server.port=80
     networks:
       - m2c
       - default
