--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -9,33 +9,33 @@ services:
       - ~/.m2c/www/default.conf:/etc/nginx/conf.d/default.conf
       - ~/.m2c/www/html/index.html:/usr/share/nginx/html/index.html
     labels:
-      - traefik.passHostHeader=true
       - traefik.enable=true
-      - traefik.frontend.rule=Host:m2c.test
-      - traefik.port=8080
+      - traefik.http.routers.mage2click-m2c.tls=true
+      - traefik.http.routers.mage2click-m2c.entryPoints=https
+      - traefik.http.routers.mage2click-m2c.rule=Host(`m2c.test`)
+      - traefik.http.services.mage2click-m2c.loadbalancer.server.port=8080
     restart: always
 
   traefik:
     container_name: m2c.test__traefik
-    image: traefik:1.7-alpine
-    command:
-      - --api
-      - --docker
-      - --docker.domain=test
-      - --docker.network=m2c
-      - --docker.exposedByDefault=false
+    image: traefik:v2.0.1
     ports:
       - 80:80
       - 443:443
+      - 3306:3306
     volumes:
       - ~/.m2c/traefik/traefik.toml:/etc/traefik/traefik.toml:ro
+      - ~/.m2c/traefik/dynamic.toml:/etc/traefik/dynamic.toml:ro
       - ~/.m2c/ssl/certs/m2c.crt:/etc/ssl/certs/m2c.crt:ro
       - ~/.m2c/ssl/private/m2c.key:/etc/ssl/private/m2c.key:ro
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - traefik.enable=true
-      - traefik.frontend.rule=Host:traefik.m2c.test
-      - traefik.port=8080
+      - traefik.http.routers.traefik-m2c.tls=true
+      - traefik.http.routers.traefik-m2c.entryPoints=https
+      - traefik.http.routers.traefik-m2c.service=api@internal
+      - traefik.http.routers.traefik-m2c.rule=Host(`traefik.m2c.test`)
+      - traefik.http.services.api.loadbalancer.server.port=8080
     restart: always
 
   portainer:
@@ -46,8 +46,10 @@ services:
       - portainer:/data
     labels:
       - traefik.enable=true
-      - traefik.frontend.rule=Host:portainer.m2c.test
-      - traefik.port=9000
+      - traefik.http.routers.portainer-m2c.tls=true
+      - traefik.http.routers.portainer-m2c.entryPoints=https
+      - traefik.http.routers.portainer-m2c.rule=Host(`portainer.m2c.test`)
+      - traefik.http.services.portainer-m2c.loadbalancer.server.port=9000
     restart: always
 
   mailhog:
@@ -56,8 +58,10 @@ services:
     image: mailhog/mailhog:v1.0.0
     labels:
       - traefik.enable=true
-      - traefik.frontend.rule=Host:mailhog.m2c.test
-      - traefik.port=8025
+      - traefik.http.routers.mailhog-m2c.tls=true
+      - traefik.http.routers.mailhog-m2c.entryPoints=https
+      - traefik.http.routers.mailhog-m2c.rule=Host(`mailhog.m2c.test`)
+      - traefik.http.services.mailhog-m2c.loadbalancer.server.port=8025
     restart: always
 
   dnsmasq:
@@ -69,8 +73,10 @@ services:
       - ~/.m2c/dnsmasq/dnsmasq.conf:/etc/dnsmasq.conf
     labels:
       - traefik.enable=true
-      - traefik.frontend.rule=Host:dnsmasq.m2c.test
-      - traefik.port=8080
+      - traefik.http.routers.dnsmasq-m2c.tls=true
+      - traefik.http.routers.dnsmasq-m2c.entryPoints=https
+      - traefik.http.routers.dnsmasq-m2c.rule=Host(`dnsmasq.m2c.test`)
+      - traefik.http.services.dnsmasq-m2c.loadbalancer.server.port=8080
     restart: always
 
 volumes:
