--- a/.m2c/local/docker/docker-compose.elasticsearch.yml
+++ b/.m2c/local/docker/docker-compose.elasticsearch.yml
@@ -9,8 +9,10 @@ services:
     user: root
     labels:
       - traefik.enable=true
-      - traefik.port=9200
-      - traefik.frontend.rule=Host:elasticsearch.${M2C_CFG_DOMAIN_NAME}
+      - traefik.http.routers.elasticsearch-${M2C_PROJECT_NAME}.tls=true
+      - traefik.http.routers.elasticsearch-${M2C_PROJECT_NAME}.entryPoints=https
+      - traefik.http.routers.elasticsearch-${M2C_PROJECT_NAME}.rule=Host(`elasticsearch.${M2C_CFG_DOMAIN_NAME}`)
+      - traefik.http.services.elasticsearch-${M2C_PROJECT_NAME}.loadbalancer.server.port=9200
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
     networks:
