--- a/.m2c/local/docker/docker-compose.nginx.yml
+++ b/.m2c/local/docker/docker-compose.nginx.yml
@@ -11,8 +11,10 @@ services:
       - php
     labels:
       - traefik.enable=true
-      - traefik.port=8080
-      - traefik.frontend.rule=Host:${M2C_CFG_DOMAIN_NAME}
+      - traefik.http.routers.nginx-${M2C_PROJECT_NAME}.tls=true
+      - traefik.http.routers.nginx-${M2C_PROJECT_NAME}.entryPoints=https
+      - traefik.http.routers.nginx-${M2C_PROJECT_NAME}.rule=Host(`${M2C_CFG_DOMAIN_NAME}`)
+      - traefik.http.services.nginx-${M2C_PROJECT_NAME}.loadbalancer.server.port=8080
     networks:
       - m2c
       - default
