--- a/.m2c/local/docker/docker-compose.yml
+++ b/.m2c/local/docker/docker-compose.yml
@@ -41,8 +41,13 @@ services:
       - MYSQL_PASSWORD=${M2C_CFG_MYSQL_PASSWORD:-magento}
     volumes:
       - db_data:/var/lib/mysql
+    labels:
+      - traefik.enable=true
+      - traefik.tcp.routers.mysql-${M2C_PROJECT_NAME}.rule=HostSNI(`*`)
+      - traefik.tcp.routers.mysql-${M2C_PROJECT_NAME}.entryPoints=mysql
     networks:
       - default
+      - m2c
 
   redis:
     container_name: ${M2C_CFG_DOMAIN_NAME}__redis
