--- a/docker/php/7.0/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.0/fpm-xdebug/alpine/Dockerfile
@@ -31,11 +31,11 @@ RUN     apk add --no-cache busybox-suid \
         rm -rf /var/cache/apk/* && \
         rm -rf /tmp/* && \
         addgroup -g 1000 -S app && \
-        adduser -u 1000 -S app -G app -h /var/www -s /bin/bash && \
-        mkdir -p /var/www/.config /sock /usr/local/var/log && \
+        adduser -u 1000 -S app -G app -h /var/www -s /bin/sh && \
+        mkdir -p /var/www/.config /sock /usr/local/var/log /var/log && \
         touch /usr/local/var/log/php-fpm.log && \
         chown -R app:app /var/www/html /var/www/.config /usr/local/etc/php/conf.d \
-            /sock /usr/local/var/log/php-fpm.log && \
+            /sock /usr/local/var/log/php-fpm.log /var/log && \
         chmod +x /usr/local/bin/docker-host
 
 WORKDIR /var/www/html
