--- a/docker/php/7.2/fpm/alpine/Dockerfile
+++ b/docker/php/7.2/fpm/alpine/Dockerfile
@@ -15,6 +15,7 @@ RUN     apk update && \
         apk add --no-cache \
             php7=${PHP_VERSION} \
             php7-bcmath=${PHP_VERSION} \
+            php7-calendar=${PHP_VERSION} \
             php7-ctype=${PHP_VERSION} \
             php7-curl=${PHP_VERSION} \
             php7-dom=${PHP_VERSION} \
@@ -32,6 +33,7 @@ RUN     apk update && \
             php7-soap=${PHP_VERSION} \
             php7-sodium=${PHP_VERSION} \
             php7-tokenizer=${PHP_VERSION} \
+            php7-xml=${PHP_VERSION} \
             php7-xmlwriter=${PHP_VERSION} \
             php7-xsl=${PHP_VERSION} \
             php7-zip=${PHP_VERSION} \
