Added sockets php extension to 7.2 and 7.3 PHP docker images.

--- a/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
@@ -30,6 +30,7 @@ RUN     apk update && \
             php7-pdo_mysql=${PHP_VERSION} \
             php7-simplexml=${PHP_VERSION} \
             php7-soap=${PHP_VERSION} \
+            php7-sockets=${PHP_VERSION} \
             php7-sodium=${PHP_VERSION} \
             php7-tokenizer=${PHP_VERSION} \
             php7-xml=${PHP_VERSION} \
