Added git to 7.2 and 7.3 PHP docker images

--- a/docker/php/7.3/fpm/alpine/Dockerfile
+++ b/docker/php/7.3/fpm/alpine/Dockerfile
@@ -47,6 +47,7 @@ RUN     apk update && \
             composer \
             curl \
             bash \
+            git \
             gzip \
             lsof \
             npm \
