--- a/docker/php/7.2/fpm/alpine/Dockerfile
+++ b/docker/php/7.2/fpm/alpine/Dockerfile
@@ -45,6 +45,7 @@ RUN     apk update && \
             composer \
             curl \
             bash \
+            git \
             gzip \
             lsof \
             npm \
