Updated docker-compose.yml to listen to published ports only on 127.0.0.1.

--- a/.m2c/docker/docker-compose.yml
+++ b/.m2c/docker/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - --docker.network=m2c
       - --docker.exposedByDefault=false
     ports:
-      - 80:80
-      - 443:443
+      - "127.0.0.1:80:80"
+      - "127.0.0.1:443:443"
     volumes:
       - ~/.m2c/traefik/traefik.toml:/etc/traefik/traefik.toml:ro
       - ~/.m2c/ssl/certs/m2c.crt:/etc/ssl/certs/m2c.crt:ro
@@ -64,7 +64,7 @@ services:
     container_name: m2c.test__dnsmasq
     image: jpillora/dnsmasq:1.1
     ports:
-      - 53:53/udp
+      - "127.0.0.1:53:53/udp"
     volumes:
       - ~/.m2c/dnsmasq/dnsmasq.conf:/etc/dnsmasq.conf
     labels:
