Removed nginx versions older than v1.12

--- a/docker/nginx/build
+++ b/docker/nginx/build
@@ -2,8 +2,7 @@
 
 HOME="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
 
-VERSIONS=("1.8" "1.9" "1.10" "1.11" "1.12" \
-          "1.13" "1.14" "1.15" "1.16" "1.17")
+VERSIONS=("1.12" "1.13" "1.14" "1.15" "1.16" "1.17")
 
 for i in "${!VERSIONS[@]}"
 do
