Add shadow for usermod, add php before bin/magento (Ubuntu permission issue), change php-entrypoint so that uid and gid mathe the host sytem, add user and group for docker.sock

--- a/docker/php/7.3/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.3/fpm-xdebug/alpine/Dockerfile
@@ -11,6 +11,7 @@ COPY    common/bin/* /usr/local/bin/
 
 RUN     apk update && \
         apk add --no-cache \
+            shadow \
             php7=${PHP_VERSION} \
             php7-bcmath=${PHP_VERSION} \
             php7-calendar=${PHP_VERSION} \
