--- a/docker/php/common/conf/php-fpm.conf
+++ b/docker/php/common/conf/php-fpm.conf
@@ -2,7 +2,10 @@
 listen = /sock/docker.sock
 listen.owner = app
 listen.group = app
-listen.mode = 0660
+listen.mode = 0666
+
+user = app
+group = app
 
 pm = dynamic
 pm.max_children = 50
