--- a/.m2c/local/docker/docker-compose.varnish.yml
+++ b/.m2c/local/docker/docker-compose.varnish.yml
@@ -19,7 +19,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.port=80
-      - traefik.frontend.rule=Host:${M2C_CFG_DOMAIN_NAME}
+      - traefik.frontend.rule=Host:${M2C_CFG_DOMAIN_NAME}${M2C_CFG_EXTRA_DOMAIN_NAMES}
     networks:
       - m2c
       - default
